--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@
 }
 
 .tooltipMudi {
-    background-color: #48ab33;
+    background-color: rgb(22 22 22);
     color: white;
     font-family: sans-serif;
     width: 360px;
@@ -38,21 +38,12 @@
     border-radius: 15px;
     text-align: center;
     position: absolute;
-    top: -70%;
-    right: 0%;
+    top: 18%;
+    right: 110%;
     filter: drop-shadow(3px 5px 5px rgba(10, 10, 10, 0.196));
 }
 
-.tooltipMudi::after {
-    content: "_";
-    position: absolute;
-    bottom: -15%;
-    right: 10%;
-    width: 10px;
-    border-bottom-right-radius: 50px;
-    background-color: #48ab33;
-    color: transparent;
-}
+
 
 /* estilos del modal */
 
@@ -241,4 +232,49 @@
         transition: all .2s ease-in-out;
         transform: scale(.8);
     }
+}
+
+
+@media screen and (max-width:500px) {
+
+    .btnsMudiContainer {
+    position: absolute;
+    width: max-content;
+    height: max-content;
+    right: 0%;
+    top: 30%;
+    z-index: 10;
+}
+
+.tooltipMudi {
+    background-color: rgb(22 22 22);
+    color: white;
+    font-family: sans-serif;
+    width: 300px;
+    font-size: 13px;
+    padding: 9px 13px;
+    border-radius: 15px;
+    text-align: center;
+    position: absolute;
+    top: 17%;
+    right: 104%;
+    filter: drop-shadow(3px 5px 5px rgba(10, 10, 10, 0.196));
+}
+    .containerQRMudi {
+        position: absolute;
+        top: 30%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 230px;
+        right: -150%;
+        padding: 20px;
+        border-radius: 10px;
+        color: white;
+        transition: all .2s ease-in-out;
+        transform: scale(.8);
+    }
+
+
 }
